linear formula, attribute tooltips, critical axes, cleaving changes etc